feat: add deploy

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -10,8 +10,8 @@ hero:
     - text: 打开博客
       link: /guides/example/
       icon: right-arrow
-    - text: 代开
-      link: https://starlight.astro.build
+    - text: github
+      link: https://github.com/Wang9977/wy-blog
       icon: external
       variant: minimal
 ---
