feat: add gitpage deploy

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/logo.webp
   actions:
     - text: 打开博客
-      link: /guides/example/
+      link: /wy-blog/guides/example/
       icon: right-arrow
     - text: github
       link: https://github.com/Wang9977/wy-blog
